--- a/index.html
+++ b/index.html
@@ -120,14 +120,6 @@
         <div class="box">
             <div class="nav"><a href="" class="inverse-bg">~</a>/</div>
             <div>
-                <hr />
-                <p>
-                    <b>If you're a Berkeley student</b>, you're probably looking
-                    for
-                    <a href="//pass.mehvix.com"><i>pass</i>.mehvix.com</a> so
-                    you can get into the RSF.
-                </p>
-                <hr />
                 <p>
                     Hello! My name is Max Vogel, but <i>Mehvix</i> is my
                     username for most things on the web — I'm sure you can
@@ -177,9 +169,10 @@
                     >,
                     <a href="/static/media/home/IMG_20210616_131213.jpg"
                         >hiking earth</a
-                    >, among just building cool stuff: I'm an <i>amateur</i>
-                    <a href="//cloud.mehvix.com">server administrator</a>,
-                    mycologist, 3D printer, and
+                    >, among making things I find interesting: I'm an
+                    <i>amateur</i>
+                    <a href="//cloud.mehvix.com">server admin</a>, mycologist,
+                    3D printer, and
                     <a href="/static/media/home/20210816-001132.png"
                         >pyrotechnic</a
                     >
@@ -192,7 +185,10 @@
 
             <div>
                 <h1>Contact</h1>
-
+                <p>
+                    I enjoy meeting interesting people. If you're around
+                    Berkeley / the bay and want to grab coffee, reach out:
+                </p>
                 <div>
                     <table class="about">
                         <tr>
@@ -312,14 +308,13 @@
                         <a href="//toolbox.mehvix.com">Toolbox</a>
                     </li>
                     <li>
-                        <a href="//pass.mehvix.com">Pass</a> (for Berkeley
-                        students)
-                    </li>
-                    <li>
                         <a href="//notes.mehvix.com">Notes</a>
                     </li>
                     <li>
-                        <a href="//mse.mehvix.com">M. Scheme EschQR</a>
+                        <a href="//mse.mehvix.com">MSE</a>
+                    </li>
+                    <li>
+                        <a href="/quotes">Quotes</a>
                     </li>
                     <li>
                         <a href="posts">Blog</a> (<a href="posts/rss.xml">RSS</a
@@ -353,9 +348,6 @@
                                 >
                             </li>
                         </ul>
-                    </li>
-                    <li>
-                        <a href="/quotes">Quotes</a>
                     </li>
                     <li><a href="/todo">Projects TODO</a> (outdated)</li>
                     <li>
