--- a/index.html
+++ b/index.html
@@ -312,47 +312,47 @@
                     </li>
                     <li>
                         <a href="//mse.mehvix.com">MSE</a>
-                    </li>
-                    <li>
-                        <a href="/quotes">Quotes</a>
-                    </li>
-                    <li>
-                        <a href="posts">Blog</a> (<a href="posts/rss.xml">RSS</a
-                        >)
-                        <!-- todo automate this -->
-                        <ul id="sub-posts">
-                            <li>
-                                21-12-09 ::
-                                <a href="posts/pass.html" id="pass"
-                                    >Killing pass.mehvix.com</a
-                                >
-                            </li>
-                            <li>
-                                21-10-31 ::
-                                <a
-                                    href="posts/tiling-distance.html"
-                                    id="tiling-distance"
-                                    >Tiling Distance Contradiction</a
-                                >
-                            </li>
-                            <li>
+                        <li>
+                            <a href="posts">Blog</a> (<a href="posts/rss.xml">RSS</a
+                                >)
+                                <!-- todo automate this -->
+                                <ul id="sub-posts">
+                                    <li>
+                                        21-12-09 ::
+                                        <a href="posts/pass.html" id="pass"
+                                        >Killing pass.mehvix.com</a
+                                        >
+                                    </li>
+                                    <li>
+                                        21-10-31 ::
+                                        <a
+                                        href="posts/tiling-distance.html"
+                                        id="tiling-distance"
+                                        >Tiling Distance Contradiction</a
+                                        >
+                                    </li>
+                                    <li>
                                 21-06-18 ::
                                 <a href="posts/plans-2021.html" id="plans-2021"
-                                    >Current Plans</a
+                                >Current Plans</a
                                 >
                             </li>
                             <li>
                                 21-05-18 ::
                                 <a href="posts/aops-rss.html" id="aops-rss"
                                     >AoPS Blogs + RSS</a
-                                >
-                            </li>
-                        </ul>
+                                    >
+                                </li>
+                            </ul>
+                        </li>
                     </li>
-                    <li><a href="/todo">Projects TODO</a> (outdated)</li>
                     <li>
-                        <a href="/serverservices">Server</a>
+                        <a href="/quotes">Quotes</a>
                     </li>
+                    <!-- <li><a href="/todo">Projects TODO</a> (outdated)</li> -->
+                    <!-- <li> 
+                        <a href="/serverservices">Server</a>
+                    </li>--> 
                 </ul>
             </div>
 
