--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         </tr>
                         <tr>
                             <td>Signal</td>
-                            <td>[private, contact me]</td>
+                            <td>[phone number, contact me<sup>1</sup>]</td>
                         </tr>
                         <tr>
                             <td>Matrix</td>
@@ -259,6 +259,9 @@
                         class="hidden"
                     />
                 </div>
+
+                <br>
+                <sup>1</sup>I <b><i>heavily</i></b> prefer <a href="https://signal.org/">Signal</a>——I use it to reach everyone from my roommates to my grandparents. If you don't have my number, shoot me an email with yours.
             </div>
 
             <div>
