--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
                     <script>
                         document.write(attr_selected)
                     </script>
+                    <noscript>If you enabled JavaScript, this sentence becomes much more fun.</noscript>
                 </p>
             </div>
 
