--- a/quotes.html
+++ b/quotes.html
@@ -76,6 +76,39 @@
             <div class="main">
                 <article>
                     <div>
+                        <b>Lean Into Until</b>
+                        <blockquote>
+                            We will never live in a period when there were no
+                            easily accessible peer-review studies for every
+                            imaginable thought. There were very simple, very
+                            basic instances of life that could set straight
+                            every hair on the thinking man's head. And the
+                            further we go back in time, the harder it is for me
+                            to imagine just how beautiful things could be. I
+                            want to know what it's like to not understand a
+                            single thing about the universe surrounding; to look
+                            at stars in the sky and be absolutely floored by the
+                            possibilities. Are they bugs? Are they others like
+                            me, lighting fires for warmth? Are they smaller
+                            suns? Why does that large white circle turn ever so
+                            slightly along with them, all in unison? Are they
+                            moving or am I?<br /><br />
+                            ...<br /><br />
+                            It used to be okay to kill in the name of something
+                            reasonable. Someday that kind of thinking will come
+                            back. It always comes back. Has to come back.<br /><br />
+                            <i>"Hell is other people."</i>
+                        </blockquote>
+                        <p>
+                            Mike Ma,
+                            <a
+                                href="https://ia601800.us.archive.org/9/items/books-philosophy/Harassment%20Architecture%20-%20Mike%20Ma.pdf"
+                                >Harassment Architecture</a
+                            >
+                        </p>
+                    </div>
+
+                    <div>
                         <b>Japanese Cowboy</b>
                         <blockquote>
                             Like a Japanese cowboy or a brother on skates<br />
