--- a/quotes.html
+++ b/quotes.html
@@ -408,6 +408,15 @@
                     </div>
 
                     <div>
+                        <b>Found this in my notes</b>
+                        <blockquote>
+                            *DEAD* nano respects him : yes,,, chase me<br />
+                            *DEAD* nano respects him : baited perfectly<br />
+                            *DEAD* evan : can you shut the fuck ujp<br />
+                        </blockquote>
+                    </div>
+
+                    <div>
                         <b>Evil</b>
                         <blockquote>
                             It was granted me to carry away from my prison years
