--- a/quotes.html
+++ b/quotes.html
@@ -76,6 +76,117 @@
             <div class="main">
                 <article>
                     <div>
+                        <b>Writting</b>
+                        <blockquote>
+                            If there is one “scientific” discovery I am proud
+                            of, it is the discovery of the habit of writing
+                            without publication in mind. I experience it as a
+                            liberating habit: without it, doing the work becomes
+                            one thing and writing it down becomes another one,
+                            which is often viewed as an unpleasant burden. When
+                            working and writing have merged, that burden has
+                            been taken away.
+                        </blockquote>
+                        <p>
+                            <a
+                                href="https://www.cs.utexas.edu/users/EWD/transcriptions/EWD10xx/EWD1000.html"
+                                >Edsger Dijktra</a
+                            >
+                        </p>
+                    </div>
+                    <div>
+                        <b>Fast</b>
+                        <blockquote>
+                            Apollo 8. On August 9 1968, NASA decided that Apollo
+                            8 should go to the moon. It launched on December 21
+                            1968, 134 days later. Source:
+                            <a
+                                href="https://www.hq.nasa.gov/office/pao/History/SP-4009/v4p2n.htm"
+                                >Apollo Spacecraft Chronology</a
+                            >.<br />
+                            <br />
+                            San Francisco proposed a
+                            <a
+                                href="https://www.sfexaminer.com/news/two-mile-long-van-ness-bus-lane-project-faces-two-year-delay/"
+                                >new bus lane</a
+                            >
+                            on Van Ness in 2001. Its opening was delayed to
+                            <a
+                                href="https://www.sfexaminer.com/news/van-ness-avenue-brt-to-finally-begin-service-early-next-year/"
+                                >2022</a
+                            >, yielding a project duration of around 7,600 days.
+                            “The project has been delayed due to an increase of
+                            wet weather since the project started,” said Paul
+                            Rose, a San Francisco Municipal Transportation
+                            Agency spokesperson. The project will cost $310
+                            million, i.e. $100,000 per meter. The Alaska
+                            Highway, mentioned above, constructed across remote
+                            tundra, cost $793 per meter in 2019 dollars.
+                        </blockquote>
+                        <p>
+                            Patrick Collison,
+                            <a href="https://patrickcollison.com/fast"
+                                >/fast/</a
+                            >
+                        </p>
+                    </div>
+                    <div>
+                        <b>Political dissonance</b>
+                        <blockquote>
+                            The number one motto now about our state of politics
+                            is that it's essentially
+                            <i>"fake and gay"</i>-- this isn't real. Not just
+                            that it's performative, but it's cringe-worthy and
+                            connected to a pseudo-reality that's further and
+                            further away from what's actually happening. <br />
+                            <br />
+                            I'll show you this with with this [3D printing gun
+                            law]. These people will high-five themselves:
+                            <i
+                                >"oh we solved kit guns and gun crime in
+                                America, right!?"</i
+                            >
+                            and they'll parade this 100-page solution as some
+                            type of you know new-era of peace. But, what do they
+                            actually do? They established a new coordinates for
+                            the technical and how we will make guns-- because of
+                            course we'll continue to make them. And they made me
+                            some kind of profit?! Right, now you can only
+                            3D-print and CNC-mill receivers. Well god damn! I
+                            didn't think i'd be right
+                            <i>literally</i> five years later. You know that
+                            this is the only way you're going to get it done
+                            privately?<br />
+                            <br />
+                            You see these are two complete camps: these people
+                            maybe don't even realize just how starkly they've
+                            diverged from what's actually happening. A world of
+                            people making guns straight from the internet!<br />
+                            <br />
+                            <b
+                                >You have to think past the pageantry of the
+                                political.</b
+                            >
+                            <br />
+                            I don't just mean TV, I mean this idea that our
+                            institutions are somehow even connected to what's
+                            happening. The president himself (if not dead,
+                            surely dying) zombies on and they aren't even aware
+                            of what's happening. The president is a great emblem
+                            of the political.<br />
+                            <br />And I just want to think, man. I just want to
+                            live and and imagine what living would be. And I
+                            suppose at this point that means to notice and to
+                            think past the political.
+                        </blockquote>
+                        <p>
+                            Cody Wilson,
+                            <a href="https://youtu.be/bZRugDpYBuc?t=455"
+                                >2022 Reason Interview</a
+                            >
+                        </p>
+                    </div>
+                    <div>
                         <b>Lean Into Until</b>
                         <blockquote>
                             We will never live in a period when there were no
