steam + taxi + bears + cleanup

--- a/index.html
+++ b/index.html
@@ -180,7 +180,10 @@
                     <script>
                         document.write(attr_selected)
                     </script>
-                    <noscript>If you enabled JavaScript, this sentence becomes much more fun.</noscript>
+                    <noscript
+                        >If you enabled JavaScript, this sentence becomes much
+                        more fun.</noscript
+                    >
                 </p>
             </div>
 
@@ -188,7 +191,10 @@
                 <h1>Contact</h1>
                 <p>
                     I enjoy meeting interesting people. If you're around
-                    Berkeley / the bay and want to grab coffee, reach out:
+                    Berkeley / the bay area and want to grab coffee (or go
+                    <a href="/static/media/home/steam-tunnel.jpeg"
+                        >steam tunneling</a
+                    >) sometime, reach out:
                 </p>
                 <div>
                     <table class="about">
@@ -200,8 +206,8 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>Signal</td>
-                            <td>[phone number, contact me<sup>1</sup>]</td>
+                            <td>Signal<sup>1</sup></td>
+                            <td>[phone number, contact me]</td>
                         </tr>
                         <tr>
                             <td>Matrix</td>
@@ -261,8 +267,13 @@
                     />
                 </div>
 
-                <br>
-                <sup>1</sup>I <b><i>heavily</i></b> prefer <a href="https://signal.org/">Signal</a>——I use it to reach everyone from my roommates to my grandparents. If you don't have my number, shoot me an email with yours.
+                <br />
+                <p style="font-size: 85%">
+                    <sup>1</sup>I <b><i>heavily</i></b> prefer
+                    <a href="https://signal.org/">Signal</a>——I use it to reach
+                    everyone from my roommates to my grandparents. If you don't
+                    have my number, shoot me an email with yours.
+                </p>
             </div>
 
             <div>
@@ -309,46 +320,37 @@
                 <h1>Pages</h1>
                 <ul>
                     <li>
-                        <a href="//toolbox.mehvix.com">Toolbox</a>
-                    </li>
-                    <li>
-                        <a href="//notes.mehvix.com">Notes</a>
-                    </li>
-                    <li>
-                        <a href="//mse.mehvix.com">MSE</a>
-                        <li>
-                            <a href="posts">Blog</a> (<a href="posts/rss.xml">RSS</a
-                                >)
-                                <!-- todo automate this -->
-                                <ul id="sub-posts">
-                                    <li>
-                                        21-12-09 ::
-                                        <a href="posts/pass.html" id="pass"
-                                        >Killing pass.mehvix.com</a
-                                        >
-                                    </li>
-                                    <li>
-                                        21-10-31 ::
-                                        <a
-                                        href="posts/tiling-distance.html"
-                                        id="tiling-distance"
-                                        >Tiling Distance Contradiction</a
-                                        >
-                                    </li>
-                                    <li>
+                        <a href="posts">Blog</a> (<a href="posts/rss.xml">RSS</a
+                        >)
+                        <!-- todo automate this -->
+                        <ul id="sub-posts">
+                            <li>
+                                21-12-09 ::
+                                <a href="posts/pass.html" id="pass"
+                                    >Killing pass.mehvix.com</a
+                                >
+                            </li>
+                            <li>
+                                21-10-31 ::
+                                <a
+                                    href="posts/tiling-distance.html"
+                                    id="tiling-distance"
+                                    >Tiling Distance Contradiction</a
+                                >
+                            </li>
+                            <li>
                                 21-06-18 ::
                                 <a href="posts/plans-2021.html" id="plans-2021"
-                                >Current Plans</a
+                                    >Current Plans</a
                                 >
                             </li>
                             <li>
                                 21-05-18 ::
                                 <a href="posts/aops-rss.html" id="aops-rss"
                                     >AoPS Blogs + RSS</a
-                                    >
-                                </li>
-                            </ul>
-                        </li>
+                                >
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         <a href="/quotes">Quotes</a>
@@ -356,7 +358,20 @@
                     <!-- <li><a href="/todo">Projects TODO</a> (outdated)</li> -->
                     <!-- <li> 
                         <a href="/serverservices">Server</a>
-                    </li>--> 
+                    </li>-->
+                    <span>---</span>
+                    <li>
+                        <a href="//toolbox.mehvix.com">Toolbox</a>
+                    </li>
+                    <li>
+                        <a href="//notes.mehvix.com">Notes</a>
+                    </li>
+                    <li>
+                        <a href="//mse.mehvix.com">MSE</a>
+                    </li>
+                    <li>
+                        <a href="//bears.mehvix.com">BEARS</a>
+                    </li>
                 </ul>
             </div>
 
