--- a/quotes.html
+++ b/quotes.html
@@ -76,7 +76,80 @@
             <div class="main">
                 <article>
                     <div>
-                        <b>Writting</b>
+                        <b>Predicting Consciousness</b>
+                        <blockquote>
+                            The attacks on September the 11th shocked America
+                            because no-one had seen them coming. The phrase
+                            constantly used was, "We failed to join up the
+                            dots." And in the state of fear, the government
+                            passed the Patriot Act. It said that everyone's
+                            personal data must be open to examination, to stop
+                            further attacks. Privacy of the individual now
+                            became irrelevant in the face of a much higher need
+                            - security. It meant that the very thing that Google
+                            had invented, looking for patterns in a mass of
+                            data, now became central to the security of the
+                            United States. And the threat of new laws to stop
+                            Google collecting as much data on people as they
+                            wanted faded away. <br />
+                            <br />
+                            The shock of the attacks of 9/11 began a shift away
+                            from the individualism that had been at the centre
+                            of America since the 1950s. And Google was going to
+                            become central to that shift. Because rather than
+                            doing what they had originally dreamed of, giving
+                            people data so they could make their own stories,
+                            what Google were now doing was TAKING people's data
+                            and using it to predict what those individuals would
+                            do, without having to ask them anything. <br />
+                            <br />
+                            What they thought or felt as individuals and the
+                            stories they told themselves was completely
+                            irrelevant. Consciousness was being sidelined even
+                            more.
+                        </blockquote>
+                        <p>
+                            Adam Curtis,
+                            <a href="https://www.imdb.com/title/tt13973190/"
+                                >Can't Get You Out of My Head
+                            </a>
+                        </p>
+                    </div>
+                    <div>
+                        <b>Simple Creativity</b>
+                        <blockquote>
+                            Creativity is more than just being different.
+                            Anybody can plan weird; that's easy. What's hard is
+                            to be as simple as Bach. Making the simple,
+                            awesomely simple, that's creativity
+                        </blockquote>
+                        <p>Charles Mingus</p>
+                    </div>
+                    <div>
+                        <b>Deng Xiaoping on New-Age philosophy</b>
+                        <blockquote>
+                            When Deng Xiaoping visited the United States in
+                            1979, the actress Shirley MacLaine told him how
+                            impressed she had been on a visit to China during
+                            the Cultural Revolution, when Mr. Deng and countless
+                            others had been forced to toil in remote areas and
+                            ``learn from the peasants.'' The actress said she
+                            had been particularly moved by a scholar working in
+                            a field, who had described how much more fulfilling
+                            it was to grow tomatoes than to work in a
+                            university. <br />Mr. Deng looked at her and said:
+                            ``He lied.''
+                        </blockquote>
+                        <p>
+                            The NYT, February 23 1997 -- from
+                            <a
+                                href="https://people.eecs.berkeley.edu/~hilfingr/various.txt"
+                                >Hilfinger's page</a
+                            >
+                        </p>
+                    </div>
+                    <div>
+                        <b>Writing</b>
                         <blockquote>
                             If there is one “scientific” discovery I am proud
                             of, it is the discovery of the habit of writing
@@ -90,7 +163,7 @@
                         <p>
                             <a
                                 href="https://www.cs.utexas.edu/users/EWD/transcriptions/EWD10xx/EWD1000.html"
-                                >Edsger Dijktra</a
+                                >Edsger Dijkstra</a
                             >
                         </p>
                     </div>
@@ -118,7 +191,7 @@
                             “The project has been delayed due to an increase of
                             wet weather since the project started,” said Paul
                             Rose, a San Francisco Municipal Transportation
-                            Agency spokesperson. The project will cost $310
+                            Agency spokesperson. The project will cost $
                             million, i.e. $100,000 per meter. The Alaska
                             Highway, mentioned above, constructed across remote
                             tundra, cost $793 per meter in 2019 dollars.
