colemak 8mo late lol

--- a/index.html
+++ b/index.html
@@ -326,6 +326,14 @@
                         <ul id="sub-posts">
                             <li>
                                 21-12-09 ::
+                                <a
+                                    href="posts/colemak.html"
+                                    id="colemak-experience"
+                                    >The Colemak Experience</a
+                                >
+                            </li>
+                            <li>
+                                21-12-09 ::
                                 <a href="posts/pass.html" id="pass"
                                     >Killing pass.mehvix.com</a
                                 >
@@ -336,18 +344,6 @@
                                     href="posts/tiling-distance.html"
                                     id="tiling-distance"
                                     >Tiling Distance Contradiction</a
-                                >
-                            </li>
-                            <li>
-                                21-06-18 ::
-                                <a href="posts/plans-2021.html" id="plans-2021"
-                                    >Current Plans</a
-                                >
-                            </li>
-                            <li>
-                                21-05-18 ::
-                                <a href="posts/aops-rss.html" id="aops-rss"
-                                    >AoPS Blogs + RSS</a
                                 >
                             </li>
                         </ul>
