--- a/quotes.html
+++ b/quotes.html
@@ -76,6 +76,29 @@
             <div class="main">
                 <article>
                     <div>
+                        <b>Again</b>
+                        <blockquote>
+                            245. Penguins are getting taller. Soon they'll be
+                            bigger than people again<br />
+                            150. when you don't believe you can sing, you accept
+                            songs that don't deserve to be sung.<br />
+                            235. The dying man is consumed. So he tries to ask
+                            others to be as miserable and rotten as his flesh
+                            and synapses<br />
+                            436. 'Jelly 292" (Jimi's best song) the true title
+                            is 'Miracle Baby"
+                        </blockquote>
+                        <p>███████ ██████</p>
+                    </div>
+                    <div>
+                        <b>Propaganda is Always Art</b>
+                        <blockquote>
+                            Entertainment gives you a predictable pleasure. Art
+                            leads to transformation.
+                        </blockquote>
+                        <p>Makoto Fujimura</p>
+                    </div>
+                    <div>
                         <b>Predicting Consciousness</b>
                         <blockquote>
                             The attacks on September the 11th shocked America
