--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                         <a href="//mse.mehvix.com">MSE</a>
                     </li>
                     <li>
-                        <a href="//bears.mehvix.com">BEARS</a>
+                        <a href="//aops-rss.mehvix.com">AoPS RSS Generator</a>
                     </li>
                 </ul>
             </div>
