--- a/quotes.html
+++ b/quotes.html
@@ -76,7 +76,46 @@
             <div class="main">
                 <article>
                     <div>
-                        <b>Again</b>
+                        <b>To Go Where Theory No Longer Knows</b>
+                        <blockquote>
+                            Don't ever make the mistake [of thinking] that you
+                            can design something better than what you get from
+                            ruthless massively parallel trial-and-error with a
+                            feedback cycle. That's giving your intelligence much
+                            too much credit.
+                        </blockquote>
+                        <p>Linus Torvalds</p>
+                    </div>
+                    <div>
+                        <b>The Satrapy</b>
+                        <blockquote>
+                            What a misfortune, although you are made<br />
+                            for fine and great works<br />
+                            this unjust fate of yours always<br />
+                            denies you encouragement and success;<br />
+                            that base customs should block you;<br />
+                            and pettiness and indifference.<br />
+                            And how terrible the day when you yield<br />
+                            (the day when you give up and yield),<br />
+                            and you leave on foot for Susa,<br />
+                            and you go to the monarch Artaxerxes<br />
+                            who favorably places you in his court,<br />
+                            and offers you satrapies and the like.<br />
+                            And you accept them with despair<br />
+                            these things that you do not want.<br />
+                            Your soul seeks other things, weeps for other
+                            things;<br />
+                            the praise of the public and the Sophists,<br />
+                            the hard-won and inestimable Well Done;<br />
+                            the Agora, the Theater, and the Laurels.<br />
+                            How can Artaxerxes give you these,<br />
+                            where will you find these in a satrapy;<br />
+                            and what life can you live without these.<br />
+                        </blockquote>
+                        <p>Constantine P. Cavafy</p>
+                    </div>
+                    <div>
+                        <b><i>Again</i></b>
                         <blockquote>
                             245. Penguins are getting taller. Soon they'll be
                             bigger than people again<br />
