--- a/index.html
+++ b/index.html
@@ -325,6 +325,12 @@
                         <!-- todo automate this -->
                         <ul id="sub-posts">
                             <li>
+                                22-02-13 ::
+                                <a href="posts/feedback.html" id="feedback"
+                                    >Feedback</a
+                                >
+                            </li>
+                            <li>
                                 22-02-04 ::
                                 <a
                                     href="posts/colemak.html"
