--- a/quotes.html
+++ b/quotes.html
@@ -284,7 +284,7 @@
                             and they'll parade this 100-page solution as some
                             type of you know new-era of peace. But, what do they
                             actually do? They established a new coordinates for
-                            the technical and how we will make guns-- because of
+                            the technical and how we will make guns—— because of
                             course we'll continue to make them. And they made me
                             some kind of profit?! Right, now you can only
                             3D-print and CNC-mill receivers. Well god damn! I
