--- a/quotes.html
+++ b/quotes.html
@@ -76,6 +76,18 @@
             <div class="main">
                 <article>
                     <div>
+                        <b>Don't Laugh, I Love You</b>
+                        <blockquote>
+                            In the late summer of that year we lived in a house
+                            in a village that looked across the river and the
+                            plain to the mountains. In the bed of the river
+                            there were pebbles and boulders, dry and white in
+                            the sun, and the water was clear and swiftly moving
+                            and blue in the channels.
+                        </blockquote>
+                        <p>Ernest Hemingway, "A Farewell to Arms"</p>
+                    </div>
+                    <div>
                         <b>My Dad sent this to me</b>
                         <blockquote>
                             The Metamates moniker was coined by Douglas
