--- a/404.html
+++ b/404.html
@@ -54,16 +54,32 @@
                 (my contact info is on the home page).
             </p>
 
-            <h1 style="text-align: center">
-                <a href="//mehvix.com">Return home.</a>
-            </h1>
-
-            <h1 style="text-align: center">
-                <a href="#" onClick="history.go(-1); return false;"
-                    >Previous page.</a
-                >
-            </h1>
-
+            <div style="display: block; text-align: center">
+                <pre style="display: inline-block; line-height: 1.25">
+            *     ,MMM8&&&.            *      
+                <a href="//mehvix.com">Return Home.</a>    .            
+                NMMMM88&&&&&&&                
+    *          MMMM88&&&&&&&&                
+<a href="#" onClick="history.go(-1); return false;">Last Location.</a>
+                ‘MMM88&&&&&&’                
+                 ‘MMM8&&&’      *           
+                        
+        |\___/|     /\___/\                 
+        )     (     )    ~( .              ‘
+       =\     /=   =\~    /=                
+         )===(       ) ~ (                  
+        /     \     /     \                 
+        |     |     ) ~   (                 
+       /       \   /     ~ \                
+       \       /   \~     ~/                
+_/\_/\_/\__  _/_/\_/\__~__/_/\_/\_/\_/\_/\_ 
+|  |  |  |) )! |  |  (( |  |  |  |  |  |  | 
+|  |  |  ( ( ! |  |  |\\|  |  |  |  |  |  | 
+|  |  |  |)_)  |  |  |))|  |  |  |  |  |  | 
+|  |  |  |  |  |  |  |\)|  |  |  |  |  |  | 
+|  |  |  |  |  |  |  |  |  |  |  |  |  |  | 
+                </pre>
+            </div>
             <div id="footer">
                 <table id="footerTable">
                     <tr>
