--- a/index.html
+++ b/index.html
@@ -303,6 +303,10 @@
                         Verify I am who I say I am through
                         <a href="//keybase.io/mehvix/">Keybase</a>.
                     </li>
+                    <li>
+                        Stalk what I('m) read(ing) on
+                        <a href="//www.goodreads.com/mehvix/">GoodReads</a>.
+                    </li>
                     <!-- todo: uncomment when resume updated -->
                     <!-- later note: ehhhh most ppl who list resume on their personal websites tend to be asses -->
                     <!-- if you're reading this hi! I'll leave this link in as an easter egg now please hire me -->
